[package]
name = "rustcommon"
version = "0.1.0"
authors = ["syrupofplum <syrupofplum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.4.0-beta.1", default-features = false, features = [ "runtime-tokio", "macros", "mysql" ] }
redis = "0.17"
futures = "0.3"
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.7"
