[package]
name = "rustcommon"
version = "0.2.0"
authors = ["syrupofplum <syrupofplum@gmail.com>"]
edition = "2018"

[features]
default = []
full = [
    "http_async",
    "mysql_async",
    "mysql_pool_async",
    "redis_async",
    "redis_actix"
]
http_async = ["reqwest"]
mysql_async = ["sqlx"]
mysql_pool_async = ["sqlx"]
redis_async = ["redis"]
redis_actix = ["actix", "actix-redis", "redis-async"]

[dependencies]
tokio = { version = "0.2", features = ["full"] }
futures = { version = "0.3" }
serde_json = { version = "1.0" }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4" }
log = { version = "0.4" }
env_logger = { version = "0.7" }

reqwest = { version = "0.10", features = ["blocking", "json"], optional = true }
sqlx = { version = "0.4.0", default-features = false, features = [ "runtime-tokio-native-tls", "macros", "mysql" ], optional = true }
redis = { version = "0.17", optional = true }
actix = { version = "0.10", optional = true }
actix-redis = { version = "0.9", optional = true }
redis-async = { version = "0.6.3", optional = true }

[dev-dependencies]
once_cell = "1.5"
